[package]
name = "msp432_razcal"
version = "0.1.0"
authors = ["Raz <raz-@outlook.com>"]
edition = "2018"
build = "build.rs"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
debug = true

[dependencies]
paste = "1.0.6"
seq-macro = "0.3.0"
vcell = "0.1.3"

[build-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"